fixed skill buttons not rendering properly on mobile horizontal

--- a/src/Pages/Skills.module.css
+++ b/src/Pages/Skills.module.css
@@ -41,10 +41,10 @@
     justify-content: center;
     align-items: center;
     background-color: black;
-    padding-bottom: 4em;
+   
     color: white;
     flex-direction: column;
-    height:70vh;
+   
     overflow-y: auto;
     width: 100%;
   
